--- a/C0745213(week7)/index.html
+++ b/C0745213(week7)/index.html
@@ -4,9 +4,37 @@
     <meta charset="utf-8" />
     <title>C0745213_week7_</title>
     <link href="css/default.css" rel="stylesheet" />
+    <script>
+        function animal() {
+            var bird = {
+                genus: "corvus",
+                species: "corvax",
+                commanNmane: "raven",
+                callType: "squawky",
+                quate: "Nevermore",
+                maxOffSpring: 5,
+                noisy: true,
+                deadly: false
+            };
+
+            var bear = {
+                genus: "ursus",
+                species: "arctos",
+                commanNmane: "brown bear",
+                callType: "roar",
+                quate: "",
+                maxOffSpring: 3,
+                noisy: true,
+                deadly: true
+            };
+            
+        }
+    </script>
 </head>
 <body>
-    <div>Content goes here!</div>
-    <script src="js/main.js"></script>
+    <div> </div>
+    <script src="js/main.js">
+        document.write(animal());
+    </script>
 </body>
 </html>
