--- a/C0745213(week7)/index.html
+++ b/C0745213(week7)/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div> </div>
-    <script src="js/main.js">
+    <script >
         document.write(animal());
     </script>
 </body>
