--- a/C0745213(week7)/index.html
+++ b/C0745213(week7)/index.html
@@ -32,7 +32,7 @@
     </script>
 </head>
 <body>
-    <div> </div>
+    <div> hiiii</div>
     <script >
         document.write(animal());
     </script>
